[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.0.0"
authors = ["Guillaume MICHEL <guillaume@orilla.fr>"]
description = "N-Body simulation"
edition = "2021"
license = "MIT License"

[workspace.dependencies]
num = "0.4.2"
rand = "0.8.5"
rayon = "1.10.0"
cudart-sys = { path = "crates/cudart-sys", version = "0.0.0" }
nbody_cuda_kernels = { path = "crates/nbody_cuda_kernels", version = "0.0.0" }
bench_memory_cuda_kernels = { path = "crates/bench_memory_cuda_kernels", version = "0.0.0" }

