[package]
name = "bench_memory"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num.workspace = true
rand.workspace = true
rayon.workspace = true
cudart-sys.workspace = true
bench_memory_cuda_kernels.workspace = true