[package]
name = "bench_memory_cuda_kernels"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudart-sys.workspace = true

[build-dependencies]
bindgen_cuda = "0.1.5"
