[package]
name = "cudart-sys"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.4"

[features]
default = ["std"]

std = []